primeira lista de compras

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
     <head>
-        <title>Aula 2 com Git</title>
+        <title>Lista de compras</title>
     </head>
     <body>
-        Esse eh o arquivo da aula 2 criado para ensinar Git
+        <ul>
+            <li>Café</li>
+            <li>Azeite</li>
+            <li>Tomate</li>
+            <li>Maçã</li>
+            <li>Amaciante</li>
+        </ul>
     </body>
 </html>
