--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
     <head>
-        <title>Lista de compras</title>
+        <title>Lista de compras 2</title>
     </head>
     <body>
         <ul>
             <li>Café</li>
-            <li>Azeite</li>
-            <li>Tomate</li>
-            <li>Maçã</li>
-            <li>Amaciante</li>
+            <li>Açucar</li>
+            <li>Biscoito</li>
+            <li>Arroz</li>
         </ul>
     </body>
 </html>
