--- a/contato.html
+++ b/contato.html
@@ -1,2 +1,1 @@
-Essa pagina no futuro vai permitir que pessoas entrem em contato pra eu criar
-sites de lista de compras para elas
+Por enquanto se quiser entrar em contato use o email dev.thales.avila@gmail.com
