--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Lista de compras 2</title>
+        <title>Lista de compras 3</title>
     </head>
     <body>
         <ul>
@@ -8,6 +8,8 @@
             <li>Açucar</li>
             <li>Biscoito</li>
             <li>Arroz</li>
+            <li>Feijao</li>
+            <li>Macarrao</li>
         </ul>
     </body>
 </html>
